# mc

./: .gitignore  .gitmodules  README.md
AAS/TP/Model/: Mid-Term Exam (Model)_ Revisão da tentativa.html
AAS/TP/Model/Mid-Term Exam (Model)_ Revisão da tentativa_files/: styles.php
AEV/P/: report-template.md
AEV/P/09 - concorrency/: example_one.py
AEV/P/09 - concorrency/bank/: client.py
AEV/P/10 - buffer overflow/player/: Makefile  player
AEV/P/Lab01/: lab01-report-93444.md
AEV/P/Lab02/: lab02-report-93444.md
AEV/P/Lab03/: lab03-report-93444.md
AEV/P/Lab04/: lab04-report-93444.md  payload-insert.sh  report.md  test-overflow-metadata.sh
AEV/P/Lab04/player/: payload-insert.sh  test-overflow-metadata.sh
AEV/P/Lab04/tryhackme/: exploit.py  hex_payload_gen.py
AEV/P/Project/: analysis.md
AFSC/P/: .gitignore
AFSC/P/Lab02/: GPG Commands.txt  commands.txt  lab02-report-93444.md
AFSC/P/Lab02/Report/: microxpim.E01.txt.sig
CA/P/Challenges/01 - Vigenère decryption/: decipher.py
CA/P/Proj1/: tasks.md  test.py
CA/P/Proj1/c/: main  main.c
CA/P/Proj1/zig/: build.zig
ER/P/Lab01/2 - magic/: 23
SR/P/Lab01/: Lab01.md
first-year/first-semester/CA/P/d-rsa/rust/d_rsa/: Cargo.toml
first-year/first-semester/CA/P/d-rsa/rust/d_rsa/src/: main.rs
first-year/first-semester/CA/P/d-rsa/rust/random_generator/: Cargo.toml
first-year/first-semester/CA/P/d-rsa/rust/random_generator/src/: random_generator.rs
second-year/: Presentation-template.md
second-year/first-semester/PDPOE/: Rules.txt
second-year/first-semester/SM/: Script.md
(+4450 files in other folders)
