[package]
name = "d_rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
base64ct = "1.6.0"
hex = "0.4.3"
integer = "0.1.0"
is_prime = "2.0.9"
num-bigint = "0.4.4"
num-bigint-dig = "0.8.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
range = "1.0.0"
rsa = "0.9.6"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
