[package]
name = "random_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
pbkdf2 = "0.12.2"
rc4 = "0.1.0"
sha2 = "0.10.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3